[package]
name = "flower"
version = "0.1.0"
edition = "2021"
authors = ["Misaka 15535"]
license = "GLWTPL"
description = """
Try making a cross-platform GUI library.
"""
readme = "README.md"
keywords = ["opengl", "gui"]

[features]
default = ["renderer-native-gdi-plus"]
#renderer-native-default = []
#renderer-native-direct2d = ["windows/Foundation_Numerics", "windows/Win32_Foundation", "windows/Win32_Graphics_Direct2D", "windows/Win32_Graphics_Dxgi_Common", "windows/Win32_Graphics_Direct2D_Common"]
renderer-native-gdi-plus = ["gdiplus-sys2"]
renderer-glow = ["glow", "bytemuck"]


[dependencies]
flower_base = { version = "0.1.0", path = "../flower_base", features = ["renderer-native-gdi-plus"] }
flower_macro = { version = "0.1.0", path = "../flower_macro" }

once_cell = "1.9.0"
takeable-option = "0.4"
log = "0.4"

#nalgebra-glm = "0.12"
image = "0.24.1"

#async-trait = "0.1"
#cgmath = "0.18.0"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }

glow = { version = "0.11.2", optional = true }
bytemuck = { version = "1.8.0", optional = true }

#windows = { version = "0.48", optional = true }

winapi = { version = "0.3.9", features = ["ntdef", "combaseapi", "winbase", "objidlbase"] }
gdiplus-sys2 = { version = "0.1.1", optional = true }

cargo-heaptrack = "0.1.0"

minstant="0.1.2"
[[example]]
name = "test"

