[package]
name = "flower_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
renderer-native-gdi-plus = ["gdiplus-sys2"]

[dependencies]
glutin = { version = "0.29.1" }

once_cell = "1.9.0"
rustc-hash = { version = "1.0" }
log = "0.4"

winapi = { version = "0.3.9", features = ["ntdef", "combaseapi", "winbase", "objidlbase"] }
gdiplus-sys2 = { version = "0.1.1", optional = true }

cargo-heaptrack = "0.1.0"