[package]
name = "flower_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
flower = { version = "0.1.0-alpha.1", path = "../flower" }
flower_control = { version = "0.1.0-alpha.1", path = "../flower_control" }
fast_log="1.4"
#simple_logger="2.1.0"
once_cell = "1.9.0"