[package]
name = "windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell = "1.9.0"
# 少量数据时查询速度更快的map
rustc-hash = { version = "1.0" }
winapi = { version = "0.3.9", features = ["windowsx","winuser", "libloaderapi", "minwindef", "windef", "ntdef"] }


[[example]]
name = "test"